<resources>
    <string name="app_name">Калькулятор теста</string>
    <string name="water">Вода</string>
    <string name="flour">Мука</string>
    <string name="salt">Соль</string>
    <string name="sugar_honey">Сахар</string>
    <string name="butter">Масло</string>
    <string name="title_ingredient">Ингредиент</string>
    <string name="title_grams">грамм</string>
    <string name="title_percent">%</string>
    <string name="title_correction">Изменить</string>
    <string name="hint_zero">0</string>
    <string name="flour_const_percent">100</string>
    <string name="button_calculate_text">Расчитать</string>

    <string name="error_alert_title_error">Ошибка</string>
    <string name="error_alert_title_warning">Предупреждение</string>
    <string name="error_alert_ok_button_ok">Ок</string>
    <string name="error_alert_ok_button_cancel">Отмена</string>
    <string name="error_alert_description_try_again">Попробуй ещё раз</string>
    <string name="error_invalid_flour_input">Укажи вес муки</string>
    <string name="error_invalid_water_input">Укажи вес воды</string>
    <string name="error_invalid_salt_input">Укажи вес соли</string>
    <string name="error_invalid_water_percent">Не расчитан % воды</string>
    <string name="error_invalid_salt_percent">Не расчитан % соли</string>
    <string name="error_invalid_sugar_percent">Не расчитан % сахара</string>
    <string name="error_invalid_butter_percent">Не расчитан % масла</string>
</resources>