<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="Converter"
            type="com.example.doughcalculator.common.converters.Converter"/>

        <variable
            name="ratio"
            type="com.example.doughcalculator.data.RatioModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A300BCD4"
        android:backgroundTint="#80673AB7"
        android:backgroundTintMode="src_in"
        tools:context=".MainActivity">

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,1,2,3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="9dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginBottom="3dp"
                    android:paddingTop="3dp">

                    <TextView
                        style="@style/table_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="-12dp"
                        android:text="@string/title_ingredient"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        style="@style/table_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_grams"
                        android:textAlignment="center" />

                    <TextView
                        style="@style/table_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_percent"
                        android:textAlignment="center" />

                    <TextView
                        style="@style/table_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="18dp"
                        android:text="@string/title_correction"
                        android:textAlignment="center" />

                </TableRow>

                <TableRow style="@style/table_row">

                    <TextView
                        style="@style/ingredient_title"
                        android:text="@string/flour" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_flour_grams"
                        style="@style/TextInputEditText.Digits"
                        android:nextFocusForward="@id/et_water_grams"
                        android:text="@={Converter.shortToString(ratio.flourGram)}"
                        tools:ignore="DuplicateSpeakableTextCheck" />

                    <TextView
                        style="@style/TextViewReadOnly"
                        android:text="@string/flour_const_percent" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_flour_grams_correction"
                        style="@style/TextInputEditText.Digits"
                        android:text="@={Converter.shortToString(ratio.flourGramCorrection)}"
                        android:layout_marginEnd="12dp"
                        android:gravity="center_horizontal"
                        android:importantForAutofill="no" />

                </TableRow>

                <TableRow style="@style/table_row">

                    <TextView
                        style="@style/ingredient_title"
                        android:text="@string/water" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_water_grams"
                        style="@style/TextInputEditText.Digits"
                        android:text="@={Converter.shortToString(ratio.waterGram)}"
                        android:nextFocusForward="@id/et_salt_grams" />

                    <TextView
                        android:id="@+id/tv_water_percent"
                        style="@style/TextViewReadOnly"
                        android:text="@={Converter.doubleToString(ratio.waterPercent)}"/>

                    <TextView
                        android:id="@+id/tv_water_grams_correction"
                        style="@style/TextViewReadOnly"
                        android:text="@={Converter.shortToString(ratio.waterGramCorrection)}"
                        android:layout_marginEnd="12dp" />

                </TableRow>

                <TableRow style="@style/table_row">

                    <TextView
                        style="@style/ingredient_title"
                        android:text="@string/salt" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_salt_grams"
                        style="@style/TextInputEditText.Digits"
                        android:text="@={Converter.shortToString(ratio.saltGram)}"
                        android:nextFocusForward="@id/et_sugar_grams" />

                    <TextView
                        android:id="@+id/tv_salt_percent"
                        style="@style/TextViewReadOnly"
                        android:text="@={Converter.doubleToString(ratio.saltPercent)}"/>

                    <TextView
                        android:id="@+id/tv_salt_grams_correction"
                        style="@style/TextViewReadOnly"
                        android:text="@={Converter.shortToString(ratio.saltGramCorrection)}"
                        android:layout_marginEnd="12dp" />

                </TableRow>

                <TableRow style="@style/table_row">

                    <TextView
                        style="@style/ingredient_title"
                        android:text="@string/sugar_honey" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_sugar_grams"
                        style="@style/TextInputEditText.Digits"
                        android:text="@={Converter.shortToString(ratio.sugarGram)}"
                        android:nextFocusForward="@id/et_butter_grams" />

                    <TextView
                        android:id="@+id/tv_sugar_percent"
                        style="@style/TextViewReadOnly"
                        android:text="@={Converter.doubleToString(ratio.sugarPercent)}"/>

                    <TextView
                        android:id="@+id/tv_sugar_grams_correction"
                        style="@style/TextViewReadOnly"
                        android:text="@={Converter.shortToString(ratio.sugarGramCorrection)}"
                        android:layout_marginEnd="12dp" />

                </TableRow>

                <TableRow style="@style/table_row">

                    <TextView
                        style="@style/ingredient_title"
                        android:text="@string/butter" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_butter_grams"
                        android:text="@={Converter.shortToString(ratio.butterGram)}"
                        style="@style/TextInputEditText.Digits" />

                    <TextView
                        android:id="@+id/tv_butter_percent"
                        style="@style/TextViewReadOnly"
                        android:text="@={Converter.doubleToString(ratio.butterPercent)}"/>

                    <TextView
                        android:id="@+id/tv_butter_grams_correction"
                        style="@style/TextViewReadOnly"
                        android:text="@={Converter.shortToString(ratio.butterGramCorrection)}"
                        android:layout_marginEnd="12dp" />

                </TableRow>

            </TableLayout>
        </ScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scroll_view">

            <Button
                android:id="@+id/bt_calculate"
                style="@style/action_button"
                android:text="@string/button_calculate_text"
                app:cornerRadius="16dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>